--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.1
+cssselect==1.3.0
+idna==3.11
+jmespath==1.0.1
+lxml==6.0.2
+packaging==25.0
+parsel==1.10.0
+PyYAML==6.0.3
 requests==2.32.5
 selectorlib==0.16.0
-sqlite3
+urllib3==2.6.2
+w3lib==2.3.1
